# Cpp-RPC-ClientServer

./: README.md
fileManager/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fileManager  fileManagerClient  fileManagerServer  filemanager.cpp  filemanager.h  filemanager_imp.cpp  filemanager_imp.h  filemanager_stub.cpp  filemanager_stub.h  main_fm.cpp  main_fmServer.cpp  serialize.cpp  serialize.h
multMatrix/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main_multMatrix.cpp  main_multMatrixServer.cpp  multMatrix  multMatrixClient  multMatrixServer  multmatrix.h  multmatrix_imp.cpp  multmatrix_imp.h  multmatrix_stub.cpp  multmatrix_stub.h  resultado.txt  resultado2.txt  serialize.hpp
